--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "lint": "eslint ./lib/",
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/DarkwinngDuck/order-strategies#readme",
   "dependencies": {
+    "jest": "^24.7.1",
     "json-pointer": "^0.6.0"
   },
   "devDependencies": {
